--- a/09-async/css/user.css
+++ b/09-async/css/user.css
@@ -15,6 +15,7 @@
     color: red;
 }
 
+.reveal section .fragment.current-visible.init_visible,
 .reveal section .fragment.init_visible {
     visibility: visible;
     opacity: 1;
@@ -24,24 +25,33 @@
     transition-duration: .3s;
 }
 
+.highlight.fragment.visible.current-visible.current-fragment,
 .highlight.fragment.visible,
 .highlight.static {
     color: #000;
 }
 
+.highlight.yellow.fragment.visible.current-visible.current-fragment,
 .highlight.yellow.fragment.visible,
 .highlight.yellow.static {
     background-color: #a0a0f0;
 }
 
+.highlight.red.fragment.visible.current-visible.current-fragment,
 .highlight.red.fragment.visible,
 .highlight.red.static {
     color: #ab4642;
 }
 
+.highlight.rat.fragment.visible.current-visible.current-fragment,
 .highlight.rat.fragment.visible,
 .highlight.rat.static {
     color: #ab4642;
+}
+
+.highlight.fragment.visible.current-visible {
+    color: inherit;
+    background-color: inherit;
 }
 
 .column {
